--- a/package.json
+++ b/package.json
@@ -4,7 +4,6 @@
   "description": "dibuat untuk belajar nodejs",
   "main": "index.js",
   "scripts": {
-    "test": "test",
     "start": "node index.js",
     "dev": "nodemon index.js"
   },
@@ -22,7 +21,10 @@
   },
   "homepage": "https://github.com/ilhamsetiabudi/belajar-nodejs#readme",
   "dependencies": {
+    "cors": "^2.8.5",
+    "dotenv": "^16.0.1",
     "express": "^4.18.1",
+    "mongodb": "^4.7.0",
     "nodemon": "^2.0.18"
   }
 }
